fix layout issue

--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ body {
   height: 50px;
   width: 50px;
   max-width: none;
+  min-width: 50px;
   border-radius: 50%;
   overflow: hidden;
   margin-right: 17px;
@@ -74,6 +75,7 @@ body {
   margin-left: 25px;
 }
 .talk-stream-comment-container {
+  width: calc(100% - 60px);
   flex: 1;
 }
 .talk-stream-comment-container > .talk-stream-comment-header {
